<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.BookmarksFragment.BookmarksFragment">

    <TextView
        android:id="@+id/text_bookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/bookmarks"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_subtitle_bookmarks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/saved_articles_to_the_library"
        android:textColor="@color/grey_primary"
        app:layout_constraintStart_toStartOf="@+id/text_bookmarks"
        app:layout_constraintTop_toBottomOf="@+id/text_bookmarks" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_bookmarks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/text_subtitle_bookmarks"
        app:layout_constraintTop_toBottomOf="@+id/text_subtitle_bookmarks" />

    <RelativeLayout
        android:id="@+id/rLayout_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/circle">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/ic_book"
                android:contentDescription="@string/image_no_saved" />
        </FrameLayout>

        <TextView
            android:id="@+id/text_no_bookmarks"
            android:layout_width="256dp"
            android:layout_height="72dp"
            android:layout_below="@id/frameLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/you_haven_t_saved_any_articles_yet_start_reading_and_bookmarking_them_now"
            android:textColor="@color/blac_primary"
            android:textSize="16sp" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>