<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ArticleFragment.ArticleFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="24dp">

            <ImageView
                android:id="@+id/img_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/go_back" />


            <ImageView
                android:id="@+id/img_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="43dp"
                android:contentDescription="@string/share_image"
                android:src="@drawable/ic_share" />


            <ImageView
                android:id="@+id/img_saved"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_bookmark_filled"
                android:visibility="gone"
                android:contentDescription="@string/icon_save_article" />

            <ImageView
                android:id="@+id/img_remove"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_bookmark_outlined"
                android:visibility="gone"
                android:contentDescription="@string/icon_remove_article" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_article_image"
                android:layout_width="0dp"
                android:layout_height="280dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardCornerRadius="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_article_main"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/main_image" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/text_item_categories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@drawable/textview_background"
                android:fontFamily="@font/roboto_bold"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:paddingEnd="16dp"
                android:paddingBottom="8dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@+id/card_article_image"
                app:layout_constraintTop_toBottomOf="@+id/card_article_image" />

            <TextView
                android:id="@+id/text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="2"
                android:textColor="@color/blac_primary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/card_article_image"
                app:layout_constraintStart_toStartOf="@+id/text_item_categories"
                app:layout_constraintTop_toBottomOf="@+id/text_item_categories" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/img_author_profile"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                app:shapeAppearanceOverlay="@style/roundedImageView"
                app:srcCompat="@drawable/img_profile" />

            <TextView
                android:id="@+id/text_author"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto_bold"
                android:maxLines="2"
                android:textColor="@color/blac_primary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_author_profile"
                app:layout_constraintTop_toTopOf="@+id/img_author_profile" />

            <TextView
                android:id="@+id/text_author_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textColor="@color/grey_primary"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/text_author"
                app:layout_constraintStart_toStartOf="@+id/text_author"
                app:layout_constraintTop_toBottomOf="@+id/text_author" />

            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/results"
                android:textColor="@color/blac_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/img_author_profile"
                app:layout_constraintTop_toBottomOf="@+id/img_author_profile" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:fontFamily="@font/roboto"
                android:gravity="top"
                android:scrollbars="vertical"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_result"
                app:layout_constraintTop_toBottomOf="@+id/text_result" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

